[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/thrusters-loop.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/HUD/Bottom.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD/StationMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD/GameMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HUD/CargoContents.tscn" type="PackedScene" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterDot" type="ColorRect" parent="Overlay"]
margin_left = 511.0
margin_top = 299.0
margin_right = 513.0
margin_bottom = 301.0
rect_min_size = Vector2( 2, 2 )
color = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triptich" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" parent="Triptich" instance=ExtResource( 5 )]
margin_right = 960.0
margin_bottom = 536.0

[node name="CargoContents" parent="Triptich" instance=ExtResource( 6 )]
margin_right = 960.0
margin_bottom = 536.0

[node name="Column" type="VBoxContainer" parent="Triptich"]
margin_right = 960.0
margin_bottom = 536.0

[node name="Top" type="HBoxContainer" parent="Triptich/Column"]
margin_right = 960.0
margin_bottom = 16.0
alignment = 1

[node name="CargoLabel" type="Label" parent="Triptich/Column/Top"]
margin_left = 358.0
margin_top = 1.0
margin_right = 397.0
margin_bottom = 15.0
text = "Cargo:"

[node name="Cargo" type="ProgressBar" parent="Triptich/Column/Top"]
margin_left = 401.0
margin_right = 529.0
margin_bottom = 16.0
rect_min_size = Vector2( 128, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Triptich/Column/Top"]
margin_left = 533.0
margin_right = 537.0
margin_bottom = 16.0

[node name="CreditsLabel" type="Label" parent="Triptich/Column/Top"]
margin_left = 541.0
margin_top = 1.0
margin_right = 590.0
margin_bottom = 15.0
text = "Credits:"

[node name="Credits" type="Label" parent="Triptich/Column/Top"]
margin_left = 594.0
margin_top = 1.0
margin_right = 602.0
margin_bottom = 15.0
text = "0"

[node name="Middle" type="Control" parent="Triptich/Column"]
margin_top = 20.0
margin_right = 960.0
margin_bottom = 484.0
size_flags_vertical = 3

[node name="StationMenu" parent="Triptich/Column/Middle" instance=ExtResource( 4 )]
visible = false

[node name="Bottom" type="HBoxContainer" parent="Triptich/Column"]
margin_top = 488.0
margin_right = 960.0
margin_bottom = 536.0
alignment = 1
script = ExtResource( 3 )

[node name="DockingIndicatorTween" type="Tween" parent="Triptich/Column/Bottom"]

[node name="VelocityTween" type="Tween" parent="Triptich/Column/Bottom"]

[node name="Velocity" type="ProgressBar" parent="Triptich/Column/Bottom"]
margin_left = 324.0
margin_right = 452.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
step = 0.1
percent_visible = false

[node name="Docking" type="Panel" parent="Triptich/Column/Bottom"]
margin_left = 456.0
margin_right = 504.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="Vertical" type="ColorRect" parent="Triptich/Column/Bottom/Docking"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 0 )
color = Color( 0.337255, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horizontal" type="ColorRect" parent="Triptich/Column/Bottom/Docking"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 0, 1 )
color = Color( 0.337255, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="ColorRect" parent="Triptich/Column/Bottom/Docking"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 94.2617
margin_top = -1.73822
margin_right = 98.2617
margin_bottom = 2.26178
rect_pivot_offset = Vector2( 2, 2 )
color = Color( 0.337255, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetVelocity" type="ProgressBar" parent="Triptich/Column/Bottom"]
margin_left = 508.0
margin_right = 636.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
step = 0.1
percent_visible = false

[node name="ThrustSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="FadeIn" type="Tween" parent="."]

[node name="FadeOut" type="Tween" parent="."]

[node name="Pitch" type="Tween" parent="."]
[connection signal="take_off" from="Triptich/Column/Middle/StationMenu" to="." method="_on_StationMenu_take_off"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
